--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
-<head>
+</head>
 <div class="container">
     <body>
         <h1>Push up done today:</h1>
@@ -13,7 +13,6 @@
         <button id="save-btn" onclick="save()">SAVE</button>
         <div class="p"><p id="save-el">Previous set: </p>
         <script src="index.js">
-            nnerText
         </script>
     </body>
     </div>
