javascript truble shooting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
         <div class="p"><p id="save-el">Previous set: </p>
-        <script src="index.js">
+        <script src="index.js" rel="index.js">
         </script>
     </body>
     </div>
